<resources>
  <string-array name="auto_backup_options">
    <item>Daily</item>
    <item>Weekly</item>
    <item>Monthly</item>
    <item>Off</item>
  </string-array>
  <string-array name="pin_lock_auto_options">
    <item>Immediately</item>
    <item>1 minute</item>
    <item>5 minutes</item>
    <item>15 minutes</item>
    <item>1 hour</item>
    <item>24 hours</item>
  </string-array>
  <string-array name="wifi_backup_options">
    <item>Wifi only</item>
    <item>Wifi or cellular</item>
  </string-array>
  <string name="app_name">Criptext</string>
  <string name="tour_title1">Welcome to Criptext!</string>
  <string name="mk_label_yesterday">Yesterday </string>
  <string name="mk_label_today">Today </string>
  <string name="error_no_app_for_file">You may not have a proper app for viewing this content</string>
  <string name="web_view_open_in_chrome">Open in %1$s</string>
  <string name="attachment_limit_reached">Only %1$d attachments per email allowed.</string>
  <string name="attachment_history_opened">opened:</string>
  <string name="title_sync">Mailbox Sync</string>
  <string name="settings_title_sync">Request Mailbox Sync</string>
  <string name="link_auth_title">Device Authentication</string>
  <string name="link_auth_sub_title">Do you want to approve?</string>
  <string name="link_auth_message">%1$s</string>
  <string name="establishing">Establishing secure connection</string>
  <string name="cancel_sync"><u>Cancel Import</u></string>
  <string name="device_ready">Device Ready! 😎</string>
  <string name="preparing_mailbox">Encrypting Mailbox</string>
  <string name="getting_keys">Getting Keys</string>
  <string name="uploading_mailbox">Uploading Mailbox</string>
  <string name="mailbox_upload_successful">Done! 🙌</string>
  <string name="keep_waiting_title">Well, that\'s odd…</string>
  <string name="keep_waiting_message">Something has happened that is delaying this process. Do want to continue waiting?</string>
  <string name="sending_keys">Sending Keys…</string>
  <string name="waiting_for_mailbox">Waiting for Mailbox…</string>
  <string name="downloading_mailbox">Downloading Mailbox…</string>
  <string name="processing_mailbox">Restoring Mailbox…</string>
  <string name="sync_complete">Sync Complete!</string>
  <string name="push_approve">Approve</string>
  <string name="push_deny">Reject</string>
  <string name="push_link_error_title">Device Validation</string>
  <string name="push_link_error_message_approve">Unable to approve device, resend authentication request.</string>
  <string name="push_link_error_message_deny">Unable to deny device.</string>
  <string name="push_read">Mark as Read</string>
  <string name="push_trash">Delete</string>
  <string name="push_reply">Reply</string>
  <string name="push_email_error_title">New Email</string>
  <string name="push_email_update_mailbox_title">Check Your Mailbox</string>
  <string name="push_email_update_mailbox_body">You may have new emails.</string>
  <string name="push_mail_error_message_read">Error marking this email as read. Check your internet connection.</string>
  <string name="push_mail_error_message_trash">Error on moving this email to Trash. Check your internet connection.</string>
  <string name="new_email_snack">You have (%1$d) new email(s)</string>
  <string name="send">Send</string>
  <string name="save">Save</string>
  <string name="archive">Archive</string>
  <string name="delete">Delete</string>
  <string name="delete_permanent">Delete Permanently</string>
  <string name="forward">Forward</string>
  <string name="unsend">Unsend</string>
  <string name="mailbox_add_labels">Add labels</string>
  <string name="mailbox_not_spam">Not spam</string>
  <string name="mailbox_not_trash">Recover from trash</string>
  <string name="mailbox_move_to">Move to</string>
  <string name="empty_trash_banner">Emails that have been in Trash more than 30 days will be automatically deleted.</string>
  <string name="empty_trash">Empty Trash</string>
  <string name="reply_all">Reply All</string>
  <string name="slider_inbox">Inbox</string>
  <string name="slider_draft">Drafts</string>
  <string name="slider_starred">Starred</string>
  <string name="slider_sent">Sent</string>
  <string name="slider_junk">Spam</string>
  <string name="slider_trash">Trash</string>
  <string name="slider_labels">Labels</string>
  <string name="slider_allmail">All Mail</string>
  <string name="slider_upgrade_plus">Join Plus</string>
  <string name="slider_settings">Settings</string>
  <string name="slider_invite_friend">Invite a Friend</string>
  <string name="slider_support">Support</string>
  <string name="invite_title">Invite a Friend to Criptext!</string>
  <string name="invite_text">Check out Criptext, I use it to email privately and securely with anyone! Get it free at https://criptext.com/dl</string>
  <string name="sync_phonebook_text">Your contacts\' emails have been synced</string>
  <string name="sync_phonebook_permission">Permission for reading contacts is needed to sync phonebook contacts.</string>
  <string name="sync_dialog_title">Access Phonebook Contacts</string>
  <string name="sync_dialog_message">This will allow Criptext to suggest email addresses from your phonebook when composing emails.\n\nWould you like to enable Phonebook Contacts?</string>
  <string name="error_sync_contact">No contacts with email available.</string>
  <string name="already_sync_contact">Contacts already synced.</string>
  <string name="start_guide_unsend_button">Open this menu to find the unsend button</string>
  <string name="start_guide_email_read">Looks like this email was read</string>
  <string name="start_guide_secure_attachments">Add secure attachments</string>
  <string name="start_guide_multiple_conversations">Tap &amp; hold to select multiple conversations</string>
  <string name="start_guide_notification">See who\'s reading your emails</string>
  <string name="start_guide_email">Tap to compose a secure email</string>
  <string name="title_swipe">Swipe Options</string>
  <string name="title_profile_name">Profile Name</string>
  <string name="title_privacy_policy">Privacy Policy</string>
  <string name="title_terms_of_service">Terms of Service</string>
  <string name="title_open_source_libraries">Open Source Libraries</string>
  <string name="title_logout">Sign Out</string>
  <string name="title_delete_account">Delete Account</string>
  <string name="title_remove_device">Remove Device</string>
  <string name="title_enter_password">Enter your password\nto continue</string>
  <string name="title_custom_dialog">New Label</string>
  <string name="hint_custom_dialog">Enter the name</string>
  <string name="title_profile_photo">Profile Photo</string>
  <string name="title_change_password">Password</string>
  <string name="title_sync_phonebook">Sync Phonebook Contacts</string>
  <string name="title_recovery_email">Recovery Email</string>
  <string name="title_signature">Signature</string>
  <string name="title_signature_cap">SIGNATURE</string>
  <string name="title_custom_domain_cap">CUSTOM DOMAIN</string>
  <string name="title_recovery_email_cap">RECOVERY EMAIL</string>
  <string name="title_change_password_cap">CHANGE PASSWORD</string>
  <string name="title_allow_notifications">Allow Notifications</string>
  <string name="title_allow_preview">Notification Preview</string>
  <string name="title_two_fa">Two-Factor Authentication</string>
  <string name="title_read_receipts">Read Receipts</string>
  <string name="title_privacy">Privacy</string>
  <string name="title_badges">Badge App Icon</string>
  <string name="title_sounds">Sounds</string>
  <string name="separator_account">ACCOUNT</string>
  <string name="separator_about">ABOUT</string>
  <string name="separator_support">SUPPORT</string>
  <string name="status_not_confirmed">(not verified)</string>
  <string name="status_confirmed">(verified)</string>
  <string name="criptext_version">Version</string>
  <string name="password_enter_error">Password is incorrect.</string>
  <string name="change_password_success">Password has been changed.</string>
  <string name="old_password">Enter old password</string>
  <string name="new_password">Enter new password</string>
  <string name="new_confirm_password">Repeat new password</string>
  <string name="device_last_activity">Last Active </string>
  <string name="device_last_activity_time">\t %1$s</string>
  <string name="device_last_activity_time_2_months">\t More than 2 months ago.</string>
  <string name="recovery_email_title">Current</string>
  <string name="button_resend_confirmation">Resend Link</string>
  <string name="recovery_confirmation_resend_failed">An error has occurred sending the confirmation link. Try again later.</string>
  <string name="resend_confirmation_dialog_message">Check your inbox for an email by Criptext and click the link within to verify your new Recovery Email.</string>
  <string name="resend_confirmation_dialog_title">Confirmation Link Sent</string>
  <string name="recovery_email_hint">Enter new recovery email</string>
  <string name="change_email_title">New</string>
  <string name="change_email_note"><b>Note: </b>Changing your recovery email will disable two-factor authentication.</string>
  <string name="button_change_email_confirm">Change Email</string>
  <string name="recovery_email_has_changed">Recovery email changed successfully</string>
  <string name="recovery_email_change_fail_same">Recovery email already is %1$s</string>
  <string name="two_fa_button">Got it!</string>
  <string name="title_warning_two_fa">
    <b>Recovery Email Not Set</b>
  </string>
  <string name="title_enabled_two_fa">
    <b>2FA Enabled!</b>
  </string>
  <string name="message_enabled_two_fa">Next time you sign in on another device you\'ll have to enter your password and then validate the sign in from an existing device.</string>
  <string name="cancel">Cancel</string>
  <string name="ok">Okay</string>
  <string name="more">More Options</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="reply">Reply</string>
  <string name="turn_on_lights">Turn on the lights</string>
  <string name="mark_as_read">Mark as read</string>
  <string name="mark_as_spam">Mark as Spam</string>
  <string name="print">Print</string>
  <string name="mark_as_unread">Mark as Unread</string>
  <string name="email_source">Show Source</string>
  <string name="retry">Retry Send</string>
  <string name="restore_backup_dialog_title">Restore Backup</string>
  <string name="restore_backup_dialog_message">Restore your emails from a local backup or Google Drive. This can be done later from Settings &gt; Mailbox Backup &gt; Restore Backup</string>
  <string name="restore_backup_dialog_skip_restore">
    <u>Skip Restore</u>
  </string>
  <string name="restore_backup_dialog_button">Restore from Drive</string>
  <string name="restore_backup_local_title">Restore from Backup File</string>
  <string name="mark_as_unread_from_here">Mark as Unread from here</string>
  <string name="btn_next">Next</string>
  <string name="domain_configuration_title_step_1">Visit your DNS Manager</string>
  <string name="domain_configuration_message_step_1"><b>1.</b> Go to <a href="https://www.godaddy.com/">Go Daddy</a> or whomever your domain provider is and access the <b>DNS Manager</b> where you can add MX and text records.</string>
  <string name="domain_configuration_message_2_step_1"><b>2.</b> Delete any existing MX records before proceeding.</string>
  <string name="btn_skip"><u>Skip</u></string>
  <string name="customize_theme_title">Choose a Style</string>
  <string name="customize_theme_message">Tip: Dark will actually save you \nbattery life</string>
  <string name="customize_step_2">Step 2 of 5</string>
  <string name="customize_light_option">Light 🌞</string>
  <string name="customize_dark_option">Dark 🌛</string>
</resources>