<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/turn_on_lights"
        app:showAsAction="collapseActionView"
        android:title="@string/turn_on_lights"
        android:visible="false"/>
    <item
        android:id="@+id/reply"
        app:showAsAction="collapseActionView"
        android:title="@string/reply"/>
    <item
        android:id="@+id/reply_all"
        app:showAsAction="collapseActionView"
        android:title="@string/reply_all"/>
    <item
        android:id="@+id/forward"
        app:showAsAction="collapseActionView"
        android:title="@string/forward"/>
    <item
        android:id="@+id/delete"
        app:showAsAction="collapseActionView"
        android:title="@string/delete_permanent"/>
    <item
        android:id="@+id/mark_unread"
        app:showAsAction="collapseActionView"
        android:title="@string/mark_as_unread_from_here"/>
    <item
        android:id="@+id/print"
        app:showAsAction="collapseActionView"
        android:title="@string/print"/>
    <item
        android:id="@+id/source"
        app:showAsAction="collapseActionView"
        android:title="@string/email_source"
        android:visible="false"/>
</menu>

