<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mailbox_delete_selected_messages"
        app:showAsAction="always"
        android:icon="@drawable/trash"
        android:title="@string/delete"/>


    <item
        android:id="@+id/mailbox_message_toggle_read"
        android:icon="@drawable/mail_opened"
        app:showAsAction="always"
        android:title="@string/mark_as_unread"/>

    <item
        android:icon="@drawable/more"
        app:showAsAction="always"
        android:title="@string/more">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" >
            <item
                android:id="@+id/mailbox_move_to"
                app:showAsAction="always"
                android:actionLayout="@layout/mail_item_option_move_to"
                android:title="@string/mailbox_move_to"/>
            <item
                app:showAsAction="always"
                android:id="@+id/mailbox_add_labels"
                android:title="@string/mailbox_add_labels"/>
        </menu>
    </item>
</menu>
