<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/step_1">

        <TextView
            fontPath="fonts/NunitoSans-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_configuration_title_step_1"
            android:textColor="?attr/criptextSettingsOptionsTextColor"
            android:textSize="18sp" />

        <TextView
            fontPath="fonts/NunitoSans-Regular.ttf"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_configuration_message_step_1"
            android:textColor="?attr/criptextSecondaryTextColor"
            android:textSize="13sp" />

        <TextView
            fontPath="fonts/NunitoSans-Regular.ttf"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_configuration_message_2_step_1"
            android:textColor="?attr/criptextSecondaryTextColor"
            android:textSize="13sp" />

</LinearLayout>