<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/label_chooser_shape"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_custom_dialog"
        fontPath="fonts/NunitoSans-SemiBold.ttf"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="?attr/criptextPrimaryTextColor"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_text_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/hint_custom_dialog"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/label_buttons"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:id="@+id/settings_label_no"
            android:stateListAnimator="@null"
            android:background="@drawable/label_button_left_bg"
            fontPath="fonts/NunitoSans-Bold.ttf"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:textColor="@color/button_text_color"
            fontPath="fonts/NunitoSans-Bold.ttf"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:id="@+id/settings_label_ok"
            android:stateListAnimator="@null"
            android:background="@drawable/label_button_right_bg"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>
